[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "master"
path = "src/bin/master.rs"

[[bin]]
name = "slave"
path = "src/bin/slave.rs"

[[main]]
name = "mqtt"
path = "src/main.rs"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
rand = "0.8.5"
rumqttc = "0.24.0"
serde = {version = "1.0.213", features = ["derive"]}
serde_json = "1.0.132"
tokio = "1.41.0"
uuid = {version = "1.11.0", features = ["v4"]}
